tests/fixtures/pass/async/async_closure_no_args_vm.walrus
let work = async : { return 99; };
let task = work();
println(await task);
