tests/fixtures/fail/async/await_non_task_type_error.walrus
fn value : {
    return 123;
}

let v = await value();
println(v);
